--- a/components/band-single-view/BandSingleView.module.css
+++ b/components/band-single-view/BandSingleView.module.css
@@ -116,3 +116,9 @@
 .Electronic {
   color: var(--accent-blue);
 }
+
+@media only screen and (min-width: 768px) {
+  .BandView {
+    margin-top: var(--spacing-l);
+  }
+}
