--- a/components/schedule/SchedulePage.module.css
+++ b/components/schedule/SchedulePage.module.css
@@ -72,6 +72,11 @@
 .stageFilters .active {
   outline: 2px solid white;
 }
+@media only screen and (min-width: 768px) {
+  .header {
+    margin-top: var(--spacing-l);
+  }
+}
 
 @media only screen and (min-width: 1200px) {
   .header select {
